@@ -1,3 +1,7 @@
+openoffice-base-devel - 3.0_dev300_m31-1
+- fix build with system hsqldb-java
+- fixes for dict deployement
+
 openoffice-base-devel - 3.0_dev300_m30-1
 - build with system hsqldb is broken
 - move some deps to optdepends
